@@ -14,15 +14,6 @@ INST_H_FILES = 		\
 
 BUILT_SOURCES = 
 
-if ENABLE_GTK
-INST_H_FILES += 		\
-	lunar-calendar.h
-
-BUILT_SOURCES +=         	\
-        lunar-enum-types.c        \
-        lunar-enum-types.h
-endif
-
 lib_LTLIBRARIES = liblunar-1.la
 
 liblunar_1_includedir = $(includedir)/liblunar-1/lunar
@@ -33,11 +24,6 @@ liblunar_1_la_SOURCES =	\
 	$(BUILT_SOURCES)	\
 	$(NULL)
 
-if ENABLE_GTK
-liblunar_1_la_SOURCES +=	\
-	lunar-calendar.c
-endif
-
 liblunar_1_include_HEADERS =	\
 	$(INST_H_FILES)		\
 	$(NULL)
@@ -45,14 +31,3 @@ liblunar_1_include_HEADERS =	\
 liblunar_1_la_LIBADD = 	\
 	$(LIBLUNAR_LIBS)		\
 	$(NULL)
-
-if ENABLE_GTK
-lunar-enum-types.h: lunar-enum-types.h.template $(INST_H_FILES) $(GLIB_MKENUMS)
-	(cd $(srcdir) && $(GLIB_MKENUMS) --template lunar-enum-types.h.template $(INST_H_FILES)) > $@
-        
-lunar-enum-types.c: lunar-enum-types.c.template $(INST_H_FILES) $(GLIB_MKENUMS)
-	(cd $(srcdir) && $(GLIB_MKENUMS) --template lunar-enum-types.c.template $(INST_H_FILES)) > $@
-endif
-
-
-EXTRA_DIST =  lunar-enum-types.h.template lunar-enum-types.c.template
